fix: break words in article

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -59,7 +59,7 @@
           </div>
           {{ end }}
   
-          <article class="mb-11">
+          <article class="mb-11 break-words">
             {{ .Content }}
           </article>
   
