feat: add github sponsors

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -650,6 +650,10 @@ video {
   margin-top: 0px;
 }
 
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -856,6 +860,10 @@ video {
 .rounded-b-lg {
   border-bottom-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
+}
+
+.border {
+  border-width: 1px;
 }
 
 .border-none {
